--- a/src/glade_project.glade
+++ b/src/glade_project.glade
@@ -192,22 +192,6 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkRadioButton" id="eraser_select_button">
-                    <property name="label" translatable="yes">Eraser</property>
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="receives_default">False</property>
-                    <property name="active">True</property>
-                    <property name="draw_indicator">True</property>
-                    <property name="group">primary_select_button</property>
-                  </object>
-                  <packing>
-                    <property name="expand">False</property>
-                    <property name="fill">True</property>
-                    <property name="position">5</property>
-                  </packing>
-                </child>
-                <child>
                   <object class="GtkCheckButton" id="eraser_check_button">
                     <property name="label" translatable="yes">Eraser</property>
                     <property name="visible">True</property>
@@ -246,8 +230,21 @@
                 <property name="can_focus">False</property>
                 <property name="orientation">vertical</property>
                 <child>
+                  <object class="GtkButton" id="clear_layer_button">
+                    <property name="label">Clear Layer</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">True</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">0</property>
+                  </packing>
+                </child>
+                <child>
                   <object class="GtkButton" id="erase_all_button">
-                    <property name="label">Erase</property>
+                    <property name="label">Clear</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
@@ -258,7 +255,7 @@
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">True</property>
-                    <property name="position">0</property>
+                    <property name="position">1</property>
                   </packing>
                 </child>
                 <child>
