--- a/src/glade_project.glade
+++ b/src/glade_project.glade
@@ -66,6 +66,7 @@
   </object>
   <object class="GtkWindow" id="main_window">
     <property name="can_focus">False</property>
+    <property name="title" translatable="yes">KOROKU</property>
     <property name="icon_name">applications-graphics</property>
     <child>
       <placeholder/>
